<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_Principal" />

        <item android:id="@+id/action_lista_cursos"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_Cursos"
            android:orderInCategory="101" />

        <item android:id="@+id/action_lista_seccion"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_Seccion"
            android:orderInCategory="102" />

        <item android:id="@+id/action_lista_alumno"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_Alumno"
            android:orderInCategory="103" />

        <!--item android:id="@+id/action_lista_logout"
            android:title="@string/menu_Desconectado"
            android:orderInCategory="104" /-->

        <item android:id="@+id/action_lista_salir"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_Salir"
            android:orderInCategory="105"/>

    </group>
</menu>