<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/usuario_txtNombre"
                style="@style/Edit_NombreCampos"
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            style="@style/Edit_NombreCampos"
            android:hint="@string/usuario_txtApellidoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtApellidoP"
            android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            style="@style/Edit_NombreCampos"
            android:hint="@string/usuario_txtApellidoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtApellidoM"
            android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            style="@style/Edit_NombreCampos"
            android:hint="@string/usuario_txtLogin"
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            style="@style/Edit_NombreCampos"
            android:hint="@string/usuario_txtPassword"
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</ScrollView>
