<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtUsuario_login"
                android:hint="@string/login_txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:singleLine="true"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPassword_login"
                android:hint="@string/login_txtPassword"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ckbConectado_login"
            android:text="@string/login_ckbConectar"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnEntrar_login"
            android:text="@string/login_btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333"
            android:textColor="#fff"
            android:textStyle="bold"
            android:onClick="logear"/>
    </LinearLayout>

</ScrollView>
