<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CrudAlumnoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/alumno_txtNombre"
                style="@style/Edit_NombreCampos"
                android:id="@+id/txtNombre_Alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/Edit_NombreCampos"
                android:hint="@string/alumno_txtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtApellido_Alumno"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                style="@style/Edit_NombreCampos"
                android:hint="@string/alumno_txtFechaNac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal"

                android:id="@+id/txtFechaNac_Alumno"
                android:enabled="false"/>

            <ImageButton
                android:id="@+id/alumno_btnFechaNac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_date_range_black_24dp"
                style="@style/Button_Acciones"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_NombreCampos"
                android:text="@string/alumno_spnSeccion"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content">
            </TextView>

            <Spinner
                style="@style/Edit_NombreCampos"
                android:id="@+id/txtSeccion_Alumno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_weight="1">
            </Spinner>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>